fix(build): Update build configuration

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ project_urls =
     Bug Tracker = https://github.com/kiriDevs/wtslog/issues
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: ISC License
+    License :: OSI Approved :: ISC License (ISCL)
     Operating System :: OS Independent
 
 [options]
